--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,8 @@
         "neos/flow": "^4.0 || ^5.0 || ^6.0"
     },
     "autoload": {
-        "psr-0": {
-            "Netlogix\\Cache\\GarbageCollection": "Classes"
-        }
-    },
-    "autoload-dev": {
-        "psr-0": {
-            "Netlogix\\Cache\\GarbageCollection\\Tests": "Tests"
+        "psr-4": {
+            "Netlogix\\Cache\\GarbageCollection\\": "Classes/"
         }
     },
     "extra": {
