FEATURE: Add description to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "netlogix/cache-garbagecollection",
+    "description": "Neos Package to run cache garbage collection through CLI",
     "type": "neos-package",
     "homepage": "http://websolutions.netlogix.de/",
     "license": ["MIT"],
